wordpress-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
        role: web
    spec:
      containers:
        - image: wordpress
          name: wordpress
