ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
  - host: wp.k8s.internal.t-lab.cs.teu.ac.jp
    http:
      paths:
        - backend:
            serviceName: wordpress
            servicePort: 80
